# DNSProxyServer

./: CMakeLists.txt  Makefile  README.md  blacklist.c  blacklist.h  config.c  config.h  config.yml  dns.c  dns.h  main.c  program
src/: main.c
src/blacklist/: blacklist.c  blacklist.h
src/config/: config.c  config.h
src/core/: dns.c  dns.h
src/log/: log.c  log.h
